--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.16.4",
     "next": "^14.2.3",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
